Fix source spacing

--- a/less/app.less
+++ b/less/app.less
@@ -118,7 +118,7 @@ header {
 
 	blockquote {
 		padding: 0;
-		margin: 0;
+		margin: 0 0 @line-height-computed * 2;
 		border-left: none;
 		font-size: inherit;
 		line-height: 100%;
@@ -159,7 +159,7 @@ header {
 		font-size: @font-size-base *1.5;
 		font-weight: normal;
 		line-height: 1.3;
-		display: inline-block;		
+		display: block;		
 		margin-top: 0;
 
 		&:focus {
